--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-
+    <link rel="stylesheet" href="./index.css">
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-    
+
+    <div class="window">
+        <div class="app-container">
+            <div class="app-border">
+                <div class="app-title">Back to the Drawing Board!</div>
+                <div class="canvas-shadow"></div>
+                <div class="canvas-container"></div>
+            </div>
+        </div>
+        <div class="footer"><a href="https://github.com/herold1989/etch-a-sketch" target="_blank">Herold1989</a></div>
+    </div>
+    </div>
+
+
 </body>
+
 </html>
