--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="canvas-container"></div>
             </div>
         </div>
-        <div class="footer"><a href="https://github.com/herold1989/etch-a-sketch" target="_blank">Herold1989</a></div>
+        <div class="footer"><a href="https://github.com/herold1989/etch-a-sketch" target="_blank">(@)Herold1989</a></div>
     </div>
     </div>
 
