Changed the blackboard design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="window">
         <div class="app-container">
             <div class="app-border">
-                <div class="app-title">Back to the Drawing Board!</div>
+                <div class="app-title">Econ 101</div>
                 <div class="canvas-shadow"></div>
                 <div class="canvas-container"></div>
             </div>
