Hovering works, drawing not yet

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                 <div class="app-title">Econ 101</div>
                 <div class="canvas-shadow"></div>
                 <div class="canvas-container"></div>
+                <div class="settings-container">  
+                </div>
+            </div>
+            <div class="footer"><a href="https://github.com/herold1989/etch-a-sketch" target="_blank">Herold1989</a>
             </div>
         </div>
-        <div class="footer"><a href="https://github.com/herold1989/etch-a-sketch" target="_blank">(@)Herold1989</a></div>
-    </div>
     </div>
 
 
