got a working project, start customising now

--- a/index.html
+++ b/index.html
@@ -18,11 +18,28 @@
                 <div class="app-title">Econ 101</div>
                 <div class="canvas-shadow"></div>
                 <div class="canvas-container"></div>
-                <div class="settings-container">  
+                <div class="settings-container">
+                    <div id="color-control" class="control-container" style="width:190px;">
+                      <div class="label">Colour</div>
+                      <div id="color-selector" class="control"></div>
+                    </div>
+                    <div class="control-container" style="width:120px;">
+                      <div class="label">Mode</div>
+                      <div id="mode-selector" class="control"></div>
+                    </div>
+                    <div class="control-container">
+                      <span class="grid-size-label label"></span>
+                      <div class="slider-container control">
+                        <input id="grid-slider" type="range" class="slider">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="footer"><a href="https://github.com/herold1989/etch-a-sketch" target="_blank">Herold1989</a>
                 </div>
             </div>
-            <div class="footer"><a href="https://github.com/herold1989/etch-a-sketch" target="_blank">Herold1989</a>
-            </div>
+
         </div>
     </div>
 
