--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="./index.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
-
     <div class="window">
         <div class="app-container">
             <div class="app-border">
